--- a/HTML/Components/Footer.html
+++ b/HTML/Components/Footer.html
@@ -4,8 +4,8 @@
             <div class="footer-column shop">
                 <h4>shop</h4>
                 <ul>
-                    <li><span>men</span></li>
-                    <li><span>women</span></li>
+                <li><a href="Categories.html?category=Men"><span>men</span></a></li>
+                <li><a href="Categories.html?category=Women"><span>women</span></a></li>
                 </ul>
             </div>
             <div class="footer-column">
