--- a/CSS/HeaderAndFooter.css
+++ b/CSS/HeaderAndFooter.css
@@ -129,6 +129,7 @@ ul {
     margin-top: 15px;
 
 }
+.footer .footer-content li a{color: #BFC0C0;}
 
 .footer .footer-column {
     display: inline-block;
